# oxc-plugin-worklets

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  justfile  mise.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
bench/: fixture.ts  run.sh
bench/babel/: package-lock.json  package.json  run.mjs
bench/oxc/: Cargo.toml
bench/oxc/src/: main.rs
src/: autoworkletization.rs  closure.rs  es5_lowering.rs  gesture_handler_autoworkletization.rs  globals.rs  hermes_compat.rs  layout_animation_autoworkletization.rs  lib.rs  options.rs  types.rs  worklet_factory.rs  worklet_string_code.rs
tests/: transform.rs
tests/snapshots/: transform__auto_workletize_useAnimatedStyle.snap  transform__auto_workletize_useDerivedValue.snap  transform__context_object_creates_factory.snap  transform__context_object_preserves_bindings.snap  transform__context_object_removes_marker.snap  transform__export_default_worklet.snap  transform__export_named_worklet.snap  transform__file_level_worklet.snap  transform__file_level_worklet_implicit_context_object.snap  transform__file_level_worklet_object_methods.snap  transform__gesture_handler_workletization.snap  transform__nested_worklets.snap  transform__referenced_arrow_var_declarator.snap  transform__referenced_func_declaration.snap  transform__referenced_func_expr_var.snap  transform__referenced_object_var.snap  transform__release_mode.snap  transform__simple_worklet_arrow.snap  transform__simple_worklet_function.snap  transform__var_in_catch_block_not_captured.snap  transform__var_in_for_loop_not_captured.snap  (+20 more)
